--- a/main.css
+++ b/main.css
@@ -33,8 +33,6 @@ header {
 nav {
     width: 85rem;
     margin: 0 auto;
-    
-    
 
 }
 
@@ -213,22 +211,36 @@ button:hover {
 /* Images of the hotel */
 picture #image1{
 
-    width: 40rem;
+    width: 45rem;
     
 }
 
 picture #image2{
     width: 20rem;
+    
 }
 
-.pictures {
+.pictures picture {
 
-    padding: 30px 0;
+    padding: 30px 0 10px 0;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 5px;
+    
 }
+
+.photos{
+    padding: 10px;
+    position: relative;
+    top: -70px;
+    left: 1220px;
+}
+
+
 
 /* Overview and highlights */
 .overview {
-    padding-bottom:30px;
+    padding:20px 0 30px 0;
 }
 .overview h2{
     font-size: 18px;
@@ -465,8 +477,8 @@ iframe {
 }
 
 /* Footer with subscribe and contact information */
-footer div {
-    background-color: #f2f3f4;
+.footer-color {
+    background-color: #f6f8fa;
 }
 
 .subscribe {
@@ -475,16 +487,22 @@ footer div {
     background-color: #cdeae1;
     border: #cdeae1;
     border-radius: 10px;
-    padding: 20px 20px;
+    padding: 20px 20px 0 0;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    top: 110px;
 }
+
 
 .subscribe h1 {
     padding: 10px;
     margin: 0 20px;
-    font-size: 25px;
-    font-weight: 500;
+    font-size: 30px;
+    font-weight: 600;
 
 }
+
 
 #travel {
     padding:0 10px;
@@ -526,11 +544,13 @@ footer div {
 
 .contact {
     background-color: #8dd3bb;
-    padding: 30px 80px;
+    padding: 200px 80px 50px 80px;
 }
 
 .contact ul {
     list-style-type: none;
+    display: flex;
+    justify-content: space-between;
 }
 
 .contact h4 {
