--- a/main.css
+++ b/main.css
@@ -175,14 +175,16 @@ main {
 }
 
 .details p{
-    margin:55px 0 10px 0;
-    font-size: 25px;
+    margin:55px 0 10px 120px;
+    font-size: 10px;
     font-weight: 700;
     color: #ff8985;
 }
 
-
-
+.details span {
+    font-size: 25px;
+    
+}
 
 .feedback {
     padding: 6px 10px;
@@ -196,7 +198,7 @@ main {
 }
 
 .book {
-    padding: 10px 10px 8px 10px;
+    padding: 10px 20px 8px 20px;
 }
 
 button {
@@ -239,8 +241,14 @@ picture #image2{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 5px;
+    border-radius: 10px;
     
 }
+
+/* picture img {
+    border-radius: 5px;
+} */
+
 
 .photos{
     padding: 10px;
@@ -279,6 +287,9 @@ picture #image2{
     border-radius: 5px;
     width: 90px;
     height: 90px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     
 }
 
@@ -289,7 +300,11 @@ picture #image2{
     border-radius: 5px;
     width: 90px;
     height: 80px;
+    
+}
 
+.highlights p {
+    margin: 30px 0 0 0;
 }
 
 .ratings p{
@@ -332,14 +347,18 @@ picture #image2{
     margin-left: 20px;
 }
 
-
-
 .item {
     display: flex;
 }
 
 .item p{
     margin: 10px 0 0 0;
+    font-size: 10px;
+}
+
+.item span {
+    font-size: 20px;
+    font-weight: 600;
 }
 .rooms div {
     padding-top: 10px;
@@ -431,7 +450,7 @@ iframe {
 
 /* Ratings and customer reviews */
 .reviewstab {
-    padding: 30px 0;
+    padding: 30px 0 0 0;
 }
 
 .reviewstab h1{
@@ -458,11 +477,21 @@ iframe {
     display: flex;
 }
 
-.nextpage {
+.forward {
 
     background-color:#f6f8fa;
     border: none;
     padding: 0;
+    margin-left: 8px;
+
+}
+
+.backward {
+
+    background-color:#f6f8fa;
+    border: none;
+    padding: 0;
+    margin-right: 8px;
 
 }
 
@@ -489,6 +518,10 @@ iframe {
     margin-top: 20px;
 }
 
+.page-navigator span {
+    margin-top: 2px ;
+}
+
 /* Footer with subscribe and contact information */
 .footer-color {
     background-color: #f6f8fa;
@@ -510,7 +543,7 @@ iframe {
 
 .subscribe h1 {
     padding: 10px;
-    margin: 0 20px;
+    margin: 0 20px 10px 20px;
     font-size: 30px;
     font-weight: 600;
 
@@ -545,9 +578,11 @@ iframe {
 
 .submit {
     background-color: #000;
+    border: #000;
     color: #fff;
     font-size: 10px;
-    padding: 10px 10px;
+    padding: 13px 13px;
+    
 }
 
 .submit:hover {
@@ -573,6 +608,7 @@ iframe {
 .contact p {
     font-size: 13px;
     font-weight: 400px;
+    padding: 5px;
 }
 
 .social {
