--- a/scss/header.scss
+++ b/scss/header.scss
@@ -23,7 +23,7 @@ nav {
 
             span {
                 padding: 0;
-                font-weight: map-get($font-weight, "normal");;
+                font-weight: map-get($font-weight, "normal");
             }
             
         }
